# hpc_results_v2.0

./: README.md
Dell/: README.md
HelmholtzAI/benchmarks/cosmoflow/implementations/: config-allow-large  config-allow-small  deny-list
HelmholtzAI/benchmarks/cosmoflow/implementations/pytorch/: Dockerfile  README.md  cosmo_image.def  main.py  requirements.txt  run_and_time.sh  start_horeka_training.sh  start_jb_training.sh  start_training_run.sh
HelmholtzAI/benchmarks/deepcam/implementations/: config-allow-large  config-allow-small  deny-list
HelmholtzAI/benchmarks/deepcam/implementations/containers/: README.md  singularity-build-mlperf.def
HelmholtzAI/benchmarks/deepcam/implementations/pytorch/: Dockerfile  run.sub  run_and_time.sh
HelmholtzAI/benchmarks/oc20/implementations/: config-allow-large  config-allow-small  deny-list
HelmholtzAI/benchmarks/oc20/implementations/pytorch/: Dockerfile  README_dgxa100_64x8x4_ngc22.08_pytorch.md  README_dgxa100_64x8x8x16_ngc22.08_pytorch.md  README_dgxa100_8x8x16_ngc22.08_pytorch.md  bind.sh  config.sh  dimenet_plus_plus.py  oc20_singularity.def  requirements.txt  run_and_time.sh  submit_job.sub
HelmholtzAI/benchmarks/oc20/implementations/pytorch/source/: CMakeLists.txt
HelmholtzAI/benchmarks/oc20/implementations/pytorch/source/common/: pytoch_cuda_hepler.hpp
HelmholtzAI/benchmarks/oc20/implementations/pytorch/source/ops/include/: index_mul.cuh
HelmholtzAI/benchmarks/oc20/implementations/pytorch/source/ops/kernel/: cudabind.cpp  index_mul_cuda.cu
HelmholtzAI/benchmarks/oc20/implementations/pytorch/source/src/: index_mul.cpp  pybind.cpp
HelmholtzAI/benchmarks/oc20/implementations/run_scripts/: start_horeka_training.sh  start_jb_training.sh  start_training_run.sh
HelmholtzAI/results/: README.md
HelmholtzAI/results/horeka_gpu_n512_pytorch1.13/strong/cosmoflow/: result_0.txt  result_1.txt  result_2.txt  result_3.txt  result_4.txt  result_5.txt  result_6.txt  result_7.txt  result_8.txt  result_9.txt
HelmholtzAI/results/horeka_gpu_n512_pytorch1.13/strong/deepcam/: result_0.txt  result_1.txt  result_2.txt  result_3.txt  result_4.txt
HelmholtzAI/results/horeka_gpu_n512_pytorch1.13/strong/oc20/: result_0.txt  result_1.txt  result_2.txt  result_3.txt  result_4.txt
HelmholtzAI/results/horeka_gpu_n64_pytorch1.13/weak/deepcam/: result_1.txt  result_2.txt  result_3.txt  result_4.txt  result_5.txt  result_6.txt  result_7.txt  result_8.txt
HelmholtzAI/results/horeka_gpu_n64_pytorch1.13/weak/oc20/: result_0.txt  result_1.txt  result_2.txt  result_3.txt  result_4.txt  result_5.txt  result_7.txt
HelmholtzAI/results/juwelsbooster_gpu_n128_pytorch1.13/weak/deepcam/: result_1.txt  result_10.txt  result_11.txt  result_12.txt  result_13.txt  result_14.txt  result_15.txt  result_16.txt  result_17.txt  result_18.txt  result_19.txt  result_2.txt  result_20.txt  result_21.txt  result_22.txt  result_23.txt  result_24.txt  result_3.txt  result_4.txt  result_5.txt  result_6.txt  result_7.txt  result_8.txt  result_9.txt
HelmholtzAI/results/juwelsbooster_gpu_n2048_pytorch1.13/strong/deepcam/: result_0.txt  result_1.txt  result_2.txt  result_3.txt  result_4.txt
HelmholtzAI/results/juwelsbooster_gpu_n512_pytorch1.13/strong/oc20/: result_0.txt  result_1.txt  result_2.txt  result_3.txt  result_4.txt
HelmholtzAI/results/juwelsbooster_gpu_n64_pytorch1.13/weak/oc20/: result_1.txt  result_10.txt  result_11.txt  result_12.txt  result_13.txt  result_14.txt  result_15.txt  result_16.txt  result_17.txt  result_18.txt  result_19.txt  result_2.txt  result_20.txt  result_21.txt  result_22.txt  result_23.txt  result_24.txt  result_25.txt  result_26.txt  result_27.txt  result_28.txt  result_29.txt  result_3.txt  result_30.txt  result_31.txt  result_33.txt  result_34.txt  result_35.txt  result_36.txt  result_37.txt  result_38.txt  result_39.txt  result_4.txt  result_40.txt  result_5.txt  result_6.txt  result_7.txt  result_8.txt  result_9.txt
HelmholtzAI/systems/: horeka_gpu_n512_pytorch1.13.json  horeka_gpu_n64_pytorch1.13.json  juwelsbooster_gpu_n128_pytorch1.13.json  juwelsbooster_gpu_n2048_pytorch1.13.json  juwelsbooster_gpu_n512_pytorch1.13.json  juwelsbooster_gpu_n64_pytorch1.13.json
NVIDIA/: README.md
NVIDIA/benchmarks/cosmoflow/implementations/dgxa100_n512_pytorch/: README.md
NVIDIA/benchmarks/cosmoflow/implementations/dgxa100_n64_pytorch/: README.md
NVIDIA/benchmarks/cosmoflow/implementations/pytorch/: Dockerfile  bind.sh  ci.yml  ci_dryrun.yml  ci_nightly.yml  main.py  optimizer.py  run.sub  run_and_time.sh  trainer.py
NVIDIA/benchmarks/deepcam/implementations/dgxa100_n256_pytorch/: README.md
NVIDIA/benchmarks/deepcam/implementations/dgxa100_n512_pytorch/: README.md
NVIDIA/benchmarks/deepcam/implementations/pytorch/: Dockerfile  ci_dryrun.yml  ci_nightly.yml  run.sub
NVIDIA/benchmarks/oc20/implementations/dgxa100_n512_pytorch/: README.md
NVIDIA/benchmarks/oc20/implementations/dgxa100_n64_pytorch/: README.md
NVIDIA/benchmarks/oc20/implementations/pytorch/: Dockerfile  main.py  requirements.txt  run.sub  run_and_time.sh  setup.py
NVIDIA/benchmarks/oc20/implementations/pytorch/cugraph-ops-binding/: CMakeLists.txt  binding.cpp
NVIDIA/results/dgxa100_n256_pytorch/strong/deepcam/: result_0.txt  result_1.txt  result_2.txt  result_3.txt  result_4.txt
NVIDIA/results/dgxa100_n512_pytorch/weak/cosmoflow/: result_000.txt  result_001.txt  result_002.txt  result_003.txt  result_004.txt  result_005.txt  result_006.txt  result_007.txt  result_008.txt  result_009.txt  result_010.txt  result_011.txt  result_012.txt  result_013.txt  result_014.txt  result_015.txt  result_016.txt  result_017.txt  result_018.txt  result_019.txt  result_020.txt  result_021.txt  result_022.txt  result_023.txt  result_024.txt  result_025.txt  result_026.txt  result_027.txt  result_028.txt  result_029.txt  result_030.txt  result_031.txt  result_032.txt  result_033.txt  result_034.txt  result_035.txt  (+92 more)
NVIDIA/systems/: dgxa100_n256_pytorch.json  dgxa100_n512_pytorch.json  dgxa100_n64_pytorch.json
tacc/systems/: longhorn-pytorch.json  longhorn-tf.json
(+573 files in other folders)
